...
    
    lazy var tfSeach : TintTextField = {
        let v = TintTextField.newAutoLayout()
        v.tintColor = UIColor.gray
        v.font = .titleFont()
        v.textColor = .titleColor()
        v.attributedPlaceholder = NSAttributedString(string: "Search",
                                                     attributes: [NSAttributedString.Key.foregroundColor: UIColor.lightGray])
        v.clearButtonMode = .whileEditing
        v.returnKeyType = .search
        v.delegate = self
        v.rx.text.orEmpty.bind(to: self.textSignal).disposed(by: disposeBag)
        return v
    }()
    
    lazy var btnCancel : UIButton = {
        let v = UIButton.newAutoLayout()
        v.setTitle("Cancel", for: .normal)
        v.titleLabel?.font = .titleFont()
        v.titleLabel?.textAlignment = .right
        v.setTitleColor(.gray, for: .normal)
        v.setTitleColor(.lightGray, for: .highlighted)
        v.setTitleColor(.lightGray, for: .disabled)
        v.rx.tap.bind { [weak self] in
...
